0.02
 - Fix SYNOPSIS section in doc.

0.01 2020-12-11T10:20:27+01:00
 - First version.