@@ -1,5 +1,6 @@
 0.02
  - Fix SYNOPSIS section in doc.
+ - check_array_object() rewrite to readable version.
 
 0.01 2020-12-11T10:20:27+01:00
  - First version.
